fixed card image height, set cards postition to center on tablet and phones, removed comments

--- a/mobile.css
+++ b/mobile.css
@@ -514,3 +514,10 @@ header {
         max-width: 384px;
     }
 }
+@media (max-width: 786px)
+{
+    .card-program-list
+    {
+        justify-content: center;
+    }
+}
