--- a/tablet.css
+++ b/tablet.css
@@ -181,7 +181,7 @@
     .card-image{
         margin-top: 0px;
         width: 231.09px;
-        height: 92.67px;
+        height: 93.67px;
     }
     
     .cart-program-title{
